--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "compile": "sass src/main.scss dist/main.css --no-source-map",
+    "compile": "sass src/main.scss dist/main.css --no-source-map --style=expanded",
     "merge": "node src/scripts/concat.mjs",
     "minify": "postcss dist/main.css -o dist/custom.minified.css",
     "cleanup": "node src/scripts/cleanup.mjs",
