update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apc-custom-css",
+  "name": "vscode-configurations",
   "version": "1.0.0",
   "description": "Personal configurations for my VSCode",
   "type": "commonjs",
