--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "merge": "node src/scripts/concat.mjs",
     "minify": "postcss temp/main.css -o dist/custom.minified.css",
     "cleanup": "node src/scripts/cleanup.mjs",
-    "build": "yarn compile &&  yarn minify"
+    "build": "yarn compile &&  yarn minify && bash commands/macos.txt"
   },
   "keywords": [],
   "author": "Hareki",
