--- a/package.json
+++ b/package.json
@@ -4,26 +4,30 @@
   "description": "Personal configurations for my VSCode",
   "type": "commonjs",
   "scripts": {
+    "format": "prettier --write \"src/**/*\"",
     "compile": "sass src/main.scss temp/main.css --no-source-map --style=expanded",
     "merge": "node src/scripts/concat.mjs",
     "minify": "postcss temp/main.css -o dist/custom.minified.css",
     "cleanup": "node src/scripts/cleanup.mjs",
-    "build:mac": "yarn compile &&  yarn minify && bash commands/macos.txt",
-    "build:windows": "yarn compile &&  yarn minify && powershell -ExecutionPolicy Bypass -File commands/windows.ps1"
+    "build:mac": "yarn format && yarn compile &&  yarn minify && bash commands/macos.txt",
+    "build:windows": "yarn format && yarn compile &&  yarn minify && powershell -ExecutionPolicy Bypass -File commands/windows.ps1"
   },
   "keywords": [],
   "author": "Hareki",
   "license": "ISC",
   "dependencies": {
-    "yarn": "^1.22.21",
     "clean-css-cli": "^5.6.3",
     "concat": "^1.0.3",
     "cssnano": "^6.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "glob": "^10.3.10",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
     "postcss-safe-important": "^2.0.1",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "yarn": "^1.22.21"
   }
 }
