--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vscode-configurations",
+  "name": "vscode-configuration",
   "version": "1.0.0",
-  "description": "Personal configurations for my VSCode",
+  "description": "Personal configuration for my VSCode",
   "type": "commonjs",
   "scripts": {
     "format": "prettier --write \"src/**/*\"",
@@ -30,5 +30,6 @@
     "rimraf": "^5.0.5",
     "sass": "^1.70.0",
     "yarn": "^1.22.21"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
